Add get users route
